--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
+    "react-router": "^6.14.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
@@ -44,8 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.22.8",
-    "@babel/eslint-parser": "^7.22.7",
+    "@babel/core": "^7.22.9",
+    "@babel/eslint-parser": "^7.22.9",
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-react": "^7.22.5",
@@ -53,7 +54,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
