--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.2",
